# hydbedscraper

./: .gitignore  README.md  checkformat.sh  checktypes.sh  mypy.ini  requirements.txt  setup.cfg
src/: __init__.py
src/hydbedscraper/: __main__.py  city.py  main.py  parsers.py  requests.py  type.py  types.py  writer.py
src/hydbedscraper/drivers/: ahmedabad.py  amdavad.py  hyderabad.py  pune.py  vadodara.py
src/hydbedscraper/parsers/: _cleaners.py  ahmedabad.py  amdavad.py  hyderabad.py  pune.py  vadodara.py
src/hydbedscraper/parsers/helpers/: labels.py
src/hydbedscraper/requesters/: _common.py  ahmedabad.py  amdavad.py  common.py  hyderabad.py  pune.py  vadodara.py
src/hydbedscraper/testdata/: data_private_hospitals.html  data_summary.html  path.py
src/hydbedscraper/testdata/hyderabad/: data_government_hospitals.html
src/hydbedscraper/writers/: ahmedabad.py  hyderabad.py  pune.py  vadodara.py
