[metadata]
name = hydbedscraper
version = 0.0.3
author = Saumitra Joshi
author_email = saumitra.vjoshi@gmail.com
description = Get hospital bed availability info in HYD (IN)
url = https://github.com/saumiJ/hydbedscraper
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pandas
    bs4
    requests
    lxml

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    hydbedscraper = hydbedscraper.main:work
