[metadata]
name = hydbedscraper
version = 0.0.5
author = Saumitra Joshi
author_email = saumitra.vjoshi@gmail.com
description = Get hospital bed availability information for city (IN)
url = https://github.com/saumiJ/hydbedscraper
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pandas
    bs4
    requests
    lxml
    camelot-py[cv]

[options.packages.find]
where = src
